# instagrapi-rest

./: .dockerignore  .gitignore  404.html  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  OLD_README.md  Procfile  README.md  app.json  dependencies.py  docker-compose.yml  grim  helpers.py  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  storages.py  tests.py  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  docs.yml  python-app.yml  release.yml  tests.yml
aiograpi-coverage/: index.html
api/: index.html
docs/: aiograpi-coverage.md  api.md  getting-started.md  index.md
docs/superpowers/plans/: 2026-05-15-aiograpi-python313-rest.md
docs/superpowers/specs/: 2026-05-15-aiograpi-python313-rest-design.md
examples/: client.go  htpasswd  nginx.conf
getting-started/: index.html
golang/: README.md  client.go  go.mod
routers/: account.py  album.py  auth.py  clip.py  direct.py  hashtag.py  highlight.py  igtv.py  insights.py  location.py  media.py  note.py  notifications.py  photo.py  story.py  user.py  video.py
scripts/: export_openapi.py  generate_aiograpi_coverage.py
search/: search_index.json
swift/: README.md  client.swift
tests/: test_aiograpi_coverage.py  test_app_system.py  test_auth_routes.py  test_extended_routes.py  test_helpers.py  test_insights_routes.py  test_media_story_routes.py  test_project_metadata.py  test_storage.py  test_upload_download_routes.py  test_user_routes.py
tests/live/: test_live_smoke.py
