[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiograpi-rest"
version = "2.0.7"
description = "RESTful API service for aiograpi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "aiograpi==0.9.7",
  "python-multipart>=0.0.20,<1",
  "tinydb>=4.8,<5",
  "requests>=2.32,<3",
  "aiofiles>=24.1,<25",
]

[project.urls]
Homepage = "https://github.com/subzeroid/aiograpi-rest"
Repository = "https://github.com/subzeroid/aiograpi-rest"
Issues = "https://github.com/subzeroid/aiograpi-rest/issues"

[project.optional-dependencies]
test = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "httpx>=0.28,<1",
  "pytest-cov>=7,<8",
  "pyyaml>=6,<7",
  "ruff>=0.15,<1",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.6,<10",
]

[tool.setuptools]
py-modules = ["main", "dependencies", "helpers", "storages"]

[tool.setuptools.packages.find]
include = ["routers*"]
exclude = ["tests*", "golang*", "swift*", "docs*", "examples*"]

[tool.pytest.ini_options]
addopts = "-m 'not live'"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: tests that require TEST_ACCOUNTS_URL and live Instagram accounts",
]

[tool.coverage.run]
source = ["."]
omit = [
  "tests/*",
  "golang/*",
  "swift/*",
  "docs/*",
  ".venv/*",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "I"]
